Adding Redcarpet gem and generating email notification for OTA upload

--- a/lib/yolo/notify/ios/email.html
+++ b/lib/yolo/notify/ios/email.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>*|MC:SUBJECT|*</title>
+        <title></title>
     <style type="text/css">
       /* Reset Styles */
       body{margin:0; padding:0;}
@@ -450,25 +450,7 @@
                         <!-- END PREHEADER \\ -->
                       <!-- // BEGIN CONTAINER -->
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templateContainer">
-                          <tr>
-                              <td align="center" valign="top">
-                                  <!-- // BEGIN HEADER -->
-                                  <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templateHeader">
-                                      <tr>
-                                          <td align="center" valign="top">
-                                              <table border="0" cellpadding="0" cellspacing="0" width="320">
-                                                  <tr>
-                                                        <td class="headerContent">
-                                                            <img src="http://gallery.mailchimp.com/27aac8a65e64c994c4416d6b8/images/yoga_logo.png" style="max-width:320px;" id="headerImage campaign-icon" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
-                                                        </td>
-                                                    </tr>
-                                                </table>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <!-- END HEADER \\ -->
-                                </td>
-                            </tr>
+
                           <tr>
                               <td align="center" valign="top">
                                   <!-- // BEGIN BODY -->
@@ -481,25 +463,9 @@
                                                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                                 <tr>
                                                                     <td valign="top" class="bodyContent" mc:edit="body_content">
-                                                                        <h1>Honk 1.2.9.develop (123)</h1>
-                                                                        <h3>Change log</h3>
-                                                                        <p>
-                                                                        <ul>
-                                                                          <li>Trac-55 - Welcome screen - Showing on logout & not setting shown until close hit</li>
-                                                                        </ul>
-                                                                        </p>
-                                                                        <h3>Fixes</h3>
-                                                                        <p>
-                                                                        <ul>
-                                                                          <li>No Fixes</li>
-                                                                        </ul>
-                                                                        </p>
-                                                                        <h3>Notes</h3>
-                                                                        <p>No Notes</p>
-                                                                        <h3>Known issues</h3>
-                                                                        <p>No Known issues</p>
-                                                                        <h3>Password</h3>
-                                                                        <p>iasjdiasjdf</p>
+                                                                        <h1>YOLO.TITLE</h1>
+                                                                        YOLO.CONTENT
+                                                                        YOLO.PASSWORD
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
@@ -507,7 +473,7 @@
                                                                         <table border="0" cellpadding="20" cellspacing="0" width="100%" class="templateButton" mc:hideable>
                                                                           <tr>
                                                                               <td align="center" valign="middle" class="templateButtonContent" mc:edit="button_content00">
-                                                                                  <a href="http://www.mailchimp.com" target="_blank">Install</a>
+                                                                                  <a href="YOLO.LINK" target="_blank">Install</a>
                                                                                 </td>
                                                                             </tr>
                                                                         </table>
@@ -532,22 +498,7 @@
                                               <table border="0" cellpadding="0" cellspacing="0" width="320">
                                                   <tr>
                                                         <td valign="top" class="footerContent" mc:edit="footer_content">
-                                                            <em>Copyright &copy; *|CURRENT_YEAR|* *|LIST:COMPANY|*, All rights reserved.</em>
-                                                            <br />
-                                                            *|IFNOT:ARCHIVE_PAGE|* *|LIST:DESCRIPTION|*
-                                                            <br />
-                                                            <br />
-                                                            <strong>Our mailing address is:</strong>
-                                                            <br />
-                                                            *|HTML:LIST_ADDRESS_HTML|**|END:IF|*
-                                                            <br />
-                                                            <br />
-                                                          *|IF:REWARDS|* *|HTML:REWARDS|* *|END:IF|*
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                      <td colspan="3" valign="top" class="footerContent" style="padding-top:20px;" mc:edit="footer_utility">
-                                                          <a href="*|UNSUB|*">unsubscribe from this list</a> | <a href="*|UPDATE_PROFILE|*">update subscription preferences</a>&nbsp;
+                                                            <p><em>This is an automated message sent by <a href="https://github.com/alexefish/yolo">yolo</a> A build tools gem by <a href="http://alexefish.com/">Alex Fish</a></em></p>
                                                         </td>
                                                     </tr>
                                                 </table>
